force-app/main/default/objects/Placement_Detail_History__c/Placement_Detail_History__c.object-meta.xml
<CustomObject>
    <label>Placement Detail History</label>
    <nameField>
        <label>Placement Detail History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Placement Detail History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>