force-app/main/default/objects/Placement_Detail_History__c/fields/New_value__c.field-meta.xml
<CustomField>
    <fullName>New_value__c</fullName>
    <label>New value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>