force-app/main/default/objects/Placement_Detail_History__c/fields/Placement__c.field-meta.xml
<CustomField>
    <fullName>Placement__c</fullName>
    <label>Placement</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Placement Detail History</relationshipLabel>
    <relationshipName>Placement_Detail_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>